--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,14 @@
     "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.6.2",
-    "ts-loader": "^9.4.4"
+    "ts-loader": "^9.4.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "scripts": {
+    "build": "webpack",
+    "dev": "nodemon server.ts",
+    "start": "node dist/bundle.js"
   }
 }
