--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "resolutions": {
     "mongodb": "4.17.1"
   },
+  "engines": {
+    "node": ">=16.x"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
