--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URL=mongodb://localhost/payment
+MONGO_URL=mongodb+srv://sanjarbek:09122005isa@cluster0.tx3g4ok.mongodb.net/payment
 KEY=TASKPROMAX
