--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,9 @@
     "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.6.2",
+    "nodemon": "^3.0.2",
     "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
