--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URL=mongodb+srv://coderx:QG52xpX7Unz4LoNP@cluster0.tx3g4ok.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://coderx:QG52xpX7Unz4LoNP@cluster0.tx3g4ok.mongodb.net/payment?retryWrites=true&w=majority
 KEY=TASKPROMAX
